[project]
name = "quantum-guard"
version = "1.0.0"
description = "3-qubit Quantum Error Correction environment for LLM decoding."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "httpx",
    "openai",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
# This tells the validator: Look in 'server' folder, 'app' file, for 'main' function
server = "server.app:main" 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[tool.setuptools]
packages = ["server"]

[tool.openenv]
config_path = "openenv.yaml"